--- a/style.css
+++ b/style.css
@@ -1,36 +1,30 @@
-th{
+th {
     background-color: lightgray;
-    margin: 100px 100px 100px 100px;
-}
-table, th, td{
-    width: 2px;
-    color: black;
-    border-style: solid;
-}
-.cells{
+  }
+
+
+  table, th, td {
+    border: 2px solid black;
+  }
+
+
+  th, td {
     padding: 10px;
-}
-.img1{
-    width: 150px;
-    height: 150px;
-    border: 5px dashed red; 
-    padding: 30px 30px 30px 30px;
-    height:  100%;
-    width: 25%;
-}
-.img2{
-    width: 150px;
-    height: 150px;
-    border: 5px dashed red;
-    padding: 30px 30px 30px 30px;
-    height: 7in;
-    width: 7in;
-}
-.img3{
-    width: 150px;
-    height: 150px;
-    border: 5px dashed red;
-    padding: 30px 30px 30px 30px;
-    height: 250pt;
-    width: 175pt;
-}
+  }
+
+
+table  {
+    margin-top: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+    margin-left: 100px;
+  }
+
+  img {
+    width:300px;
+    border:2px dashed red;
+    padding:30px;
+  }
+
+
+ 
