--- a/wesbite_styles.css
+++ b/wesbite_styles.css
@@ -1,7 +1,9 @@
 .hpage{
     text-align: center;
-    font-size: 15px;
-    margin: 0px 0px 0px 0px;
+    font-size: 20px;
+    padding: 50px 0px 0px 0px;
+    margin: 10px 0px 0px 0px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .CyberRent{
@@ -9,35 +11,43 @@
     text-shadow: 0px -1px rgb(155, 183, 213), 1px 0px rgb(155, 183, 213), 0px 1px rgb(155, 183, 213), -1px 0px rgb(155, 183, 213);
     text-align: center;
     margin: 0px 0px 0px 0px;
-    padding: 0px 0px 50px 0px;
+    padding: 0px 0px 100px 0px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .title{
-    text-align: left;
+    color: rgb(0, 0, 0);
     font-size: 50px;
-    padding: 20px 20px 20px 20px;
-    margin: 0px 0px 0px 0px;
+    margin: 0px 70px 0px 148px;
+    text-align: center;
     text-shadow: 0px -1px rgb(155, 183, 213), 1px 0px rgb(155, 183, 213), 0px 1px rgb(155, 183, 213), -1px 0px rgb(155, 183, 213);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .title2{
     text-align: left;
     color: rgb(91, 116, 91);
     font-size: 50px;
-    padding: 20px 20px 20px 20px;
-    margin: 0px 0px 0px 0px;
+    margin: -10px 700px 10px -10px;
+    padding: 0px 10px 10px 10px;
+    text-align: center;
     text-shadow: 0px -1px rgb(155, 183, 213), 1px 0px rgb(155, 183, 213), 0px 1px rgb(155, 183, 213), -1px 0px rgb(155, 183, 213);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .para{
     text-align: left;
-    margin: 0px 0px 10px 0px;
+    margin: -10px 700px 10px -10px;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .para2{
     background-color: rgb(155, 183, 213);
-    font-size: 20px;
-    padding: 10px 10px 10px 10px;
-    margin: 0px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
+    margin: 0px 70px 10px 210px;
     display: inline-block;
+    border-radius: 10px 10px 10px 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
