--- a/wesbite_styles.css
+++ b/wesbite_styles.css
@@ -18,36 +18,41 @@
 .title{
     color: rgb(0, 0, 0);
     font-size: 50px;
-    margin: 0px 70px 0px 148px;
-    text-align: center;
+    padding: 0px 100px 0px 120px;
+    margin: -10px 100px 20px 10px;
     text-shadow: 0px -1px rgb(155, 183, 213), 1px 0px rgb(155, 183, 213), 0px 1px rgb(155, 183, 213), -1px 0px rgb(155, 183, 213);
     font-family: 'Times New Roman', Times, serif;
 }
 
 .title2{
-    text-align: left;
     color: rgb(91, 116, 91);
     font-size: 50px;
-    margin: -10px 700px 10px -10px;
-    padding: 0px 10px 10px 10px;
-    text-align: center;
+    margin: -10px 10px 20px 10px;
+    padding: 0px 100px 0px 130px;
     text-shadow: 0px -1px rgb(155, 183, 213), 1px 0px rgb(155, 183, 213), 0px 1px rgb(155, 183, 213), -1px 0px rgb(155, 183, 213);
     font-family: 'Times New Roman', Times, serif;
 }
 
 .para{
-    text-align: left;
-    margin: -10px 700px 10px -10px;
-    padding: 10px 10px 10px 10px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
+    margin: -10px 1200px 20px 10px;
 }
 
 .para2{
     background-color: rgb(155, 183, 213);
     padding: 5px 5px 5px 5px;
-    margin: 0px 70px 10px 210px;
+    margin: 0px 70px 10px 190px;
     display: inline-block;
     border-radius: 10px 10px 10px 10px;
     font-family: 'Times New Roman', Times, serif;
+}
+
+.img1{
+    width: 300px;
+    height: 300px;
+    margin: -315px 350px 0px 100px;
+    background-color: rgb(155, 183, 213);
+    border: 4px solid black;
+    border-radius: 4px;
 }
