--- a/Website/website_styles.css
+++ b/Website/website_styles.css
@@ -79,3 +79,56 @@
 .pop-up{
     padding: 100px 10px 10px 1500px;
 }
+body {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 20px;
+}
+
+form {
+    max-width: 700px;
+    margin: 50px;
+}
+.form-section{
+    border: 1px solid black;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+label{
+    display:block;
+    margin-bottom: 8px;
+}
+input, textarea{
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+.checkbox-container {
+    display: flex;
+    align-items: center;
+}
+
+input, select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+button {
+    background-color: rgb(155, 183, 213);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+button:hover{
+    background-color: rgb(91, 116, 91);
+}
+.navbar{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h2, label, input, a, .form-check-label, body{
+    font-family: 'Times New Roman', Times, serif;
+}
